add times of day and validate hohour function
